2004-01-21  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-tasks.[ch] (e_tasks_add_todo_uri, e_tasks_remove_todo_uri,
	e_tasks_get_default_uri): renamed to _source and made them work
	with ESource's.

	* gui/tasks-component.c (update_uri_for_primary_selection,
	add_uri_for_source, remove_uri_for_source):
	* gui/tasks-control.c (tasks_control_set_property): updated for
	changes in e-tasks.[ch].

2004-01-21  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/calendar-setup.c (create_new_source_with_group):
	added 'ECalSourceType' argument to be able to create the
	ECal correctly. Added a call to e_cal_open with 'only_if_exists'
	set to FALSE so that the backend creates the calendar.
	(new_calendar_finish, new_task_list_finish): pass new argument
	to create_new_source_with_group.

2004-01-21  Rodrigo Moya <rodrigo@ximian.com>

	* gui/tasks-component.c (delete_task_list_cb): call
	e_cal_remove_calendar to actually remove the task list via
	the backend.

2004-01-21  Rodrigo Moya <rodrigo@ximian.com>

	Fixes #51705

	* gui/calendar-component.c (delete_calendar_cb): call
	e_cal_remove_calendar to actually remove the calendar via
	the backend.

2004-01-21  JP Rosevear <jpr@ximian.com>

	* gui/dialogs/calendar-setup.c (calendar_setup_new_calendar): just
	use the convienence function for the default gconf client (fixes
	leak)
	(calendar_setup_new_task_list): ditto
	(new_task_list_finish): we don't support task uri's
	
2004-01-21  JP Rosevear <jpr@ximian.com>

	* gui/dialogs/calendar-setup.c (source_to_dialog): only block
	widgets that exist

2004-01-19  JP Rosevear <jpr@ximian.com>

	* gui/e-cal-model-tasks.c (ensure_task_not_complete): correct
	property name c/p error

	Fixes # 52269
	
2004-01-19  JP Rosevear <jpr@ximian.com>

	* gui/tasks-component.c (update_primary_selection): handle the
	case where we have a bogus uid

	* gui/calendar-component.c (update_primary_selection): ditto
	
2004-01-19  Radek Doulik  <rodo@ximian.com>
