@@ -1,5 +1,15 @@
 2004-01-21  Rodrigo Moya <rodrigo@ximian.com>
 
+	* gui/e-tasks.c (e_tasks_add_todo_source): check return value
+	from auth_new_cal_from_source(). Connect to "backend_died"
+	signal on the ECal class.
+	(backend_died_cb): callback for "backend_died" that displays
+	an error message when that happens.
+
+	* gui/gnome-cal.c (backend_died_cb): use a GtkMessageDialog.
+
+2004-01-21  Rodrigo Moya <rodrigo@ximian.com>
+
 	* gui/e-tasks.[ch] (e_tasks_add_todo_uri, e_tasks_remove_todo_uri,
 	e_tasks_get_default_uri): renamed to _source and made them work
 	with ESource's.
